--- a/css/styles.css
+++ b/css/styles.css
@@ -625,11 +625,12 @@ a {
 .form-input {
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
-  width: 360px;
+  background-color: transparent;
+  outline: transparent;
+  width: 100%;
   height: 40px;
   padding-left: 38px;
-  outline: none;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-input:focus,
 .form-input:hover {
@@ -642,20 +643,25 @@ a {
 .input-wrapper {
   position: relative;
 }
+.modal-form-field-comment {
+  margin-bottom: 16px;
+}
+
 .form-textarea {
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
-  width: 360px;
-  padding-top: 8px;
-  padding-left: 16px;
+  width: 100%;
+  height: 120px;
+  padding: 8px 16px;
   font-weight: 400;
   font-size: 12px;
   line-height: 117%;
   letter-spacing: 0.04em;
+  background-color: transparent;
   color: rgba(46, 47, 66, 0.4);
   resize: none;
-  outline: none;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-textarea:focus,
 .form-textarea:hover {
@@ -666,38 +672,37 @@ a {
   padding: 3px 0px;
   top: 50%;
   transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   left: 16px;
   z-index: 800;
   fill: #2e2f42;
   cursor: pointer;
 }
 .modal-policy {
-  display: flex;
-  flex-direction: row;
-  gap: 8px;
-  align-items: center;
-}
-
-.wrap-policy-form {
   margin-bottom: 24px;
 }
-.modal-input-span {
-  text-decoration: underline;
-  line-height: 133%;
-  color: #4d5ae5;
+
+.modal-policy-text {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
 }
 .checkbox-custom {
   width: 16px;
   height: 16px;
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   padding: 3px 2px;
   margin-right: 8px;
   cursor: pointer;
   border-radius: 2px;
-  fill: #fff;
-  border: 1px solid #404bbf;
-  background-color: #4d5ae5;
-  transition: background-color;
+  fill: transparent;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .checkbox-custom-icon {
   width: 100%;
@@ -706,21 +711,20 @@ a {
   align-items: center;
   justify-content: center;
 }
-
-.input-checkbox:checked + label > span {
-  border: 1px solid #404bbf;
-  background-color: red;
-  fill: red;
+.modal-input-link {
+  text-decoration: underline;
+  line-height: 133%;
+  color: #4d5ae5;
 }
-
 .modal-form-send-btn {
   background-color: #4d5ae5;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   border: none;
   border-radius: 4px;
   padding: 16px 32px;
-  width: 169px;
+  min-width: 169px;
   height: 56px;
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 150%;
