--- a/css/styles.css
+++ b/css/styles.css
@@ -603,13 +603,14 @@ a {
   fill: #2e2f42;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-form-close-btn:focus,
-.modal-form-close-btn:hover {
+
+.modal-form-close-btn:hover,
+.modal-form-close-btn:focus {
   background-color: #404bbf;
   border: none;
 }
-.modal-form-close-btn:focus .modal-form-close-btn-icon,
-.modal-form-close-btn:hover .modal-form-close-btn-icon {
+.modal-form-close-btn:hover .modal-form-close-btn-icon,
+.modal-form-close-btn:focus .modal-form-close-btn-icon {
   fill: #fff;
 }
 
