--- a/css/styles.css
+++ b/css/styles.css
@@ -544,8 +544,8 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  opacity: 0;
-  pointer-events: none;
+  opacity: 1;
+  pointer-events: auto;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -605,12 +605,12 @@ a {
 }
 
 .modal-form-close-btn:hover,
-.modal-form-close-btn:focus {
+.modal-form-close-btn:focus-within {
   background-color: #404bbf;
   border: none;
 }
 .modal-form-close-btn:hover .modal-form-close-btn-icon,
-.modal-form-close-btn:focus .modal-form-close-btn-icon {
+.modal-form-close-btn:focus-within .modal-form-close-btn-icon {
   fill: #fff;
 }
 
