--- a/css/styles.css
+++ b/css/styles.css
@@ -544,11 +544,18 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  opacity: 1;
-  pointer-events: auto;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.modal-overlay.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
 .modal {
   position: absolute;
   top: 50%;
@@ -563,10 +570,7 @@ a {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 72px 24px 24px 24px;
 }
-.modal-overlay .is-open {
-  opacity: 1;
-  pointer-events: auto;
-}
+
 .modal-form-field {
   display: flex;
   flex-direction: column;
